<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:layout_width="@dimen/_270sdp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_5sdp"
            android:layout_marginBottom="@dimen/_8sdp"
            app:cardBackgroundColor="@color/dialog_bg_color"
            app:cardCornerRadius="@dimen/_10sdp"
            app:cardElevation="@dimen/_3sdp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingTop="@dimen/_9sdp">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/comment_tv"
                    style="@style/Widget.CodeMakers.TextView.Body.Black"
                    android:layout_gravity="center"
                    android:fontFamily="@font/opensans_semibold"
                    android:text="@string/coupon" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_8sdp" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/code_edittext"
                    style="@style/EditTextStyle"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/_10sdp"
                    android:gravity="start"
                    android:hint="@string/hint_code"
                    android:padding="@dimen/_8sdp" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_50sdp">

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_above="@+id/linear_buttons_2"
                        android:background="@color/light_stroke_color" />

                    <LinearLayout
                        android:id="@+id/linear_buttons_2"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_40sdp"
                        android:layout_alignParentBottom="true"
                        android:weightSum="2">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/cancel_button"
                            style="@style/Widget.CodeMakers.TextView.Button.NoBG"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:fontFamily="@font/opensans_semibold"
                            android:text="@string/cancel" />

                        <View
                            android:layout_width="1dp"
                            android:layout_height="match_parent"
                            android:background="@color/light_stroke_color" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/add_button"
                            style="@style/Widget.CodeMakers.TextView.Button.NoBG"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:fontFamily="@font/opensans_semibold"
                            android:text="@string/add" />

                    </LinearLayout>

                </RelativeLayout>
            </LinearLayout>

        </androidx.cardview.widget.CardView>
    </LinearLayout>
</layout>