<?xml version="1.0" encoding="utf-8"?>
<layout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/_10sdp">

        <androidx.cardview.widget.CardView
            android:layout_width="@dimen/_270sdp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/_5sdp"
            android:layout_marginRight="@dimen/_5sdp"
            android:layout_marginBottom="@dimen/_8sdp"
            app:cardBackgroundColor="@color/dialog_bg_color"
            app:cardCornerRadius="@dimen/_10sdp"
            app:cardElevation="@dimen/_3sdp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingTop="@dimen/_8sdp">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/title_tv"
                    style="@style/Widget.CodeMakers.TextView.Body"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/_8sdp"
                    android:fontFamily="@font/opensans_semibold"
                    android:text="@string/accepting_terms" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/subtitle_tv"
                    style="@style/Widget.CodeMakers.TextView.Content"
                    android:gravity="center"
                    android:paddingLeft="@dimen/_10sdp"
                    android:paddingTop="@dimen/_8sdp"
                    android:paddingRight="@dimen/_10sdp"
                    android:paddingBottom="@dimen/_8sdp"
                    android:text="@string/accepting_terms_context" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_50sdp">

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_above="@+id/linear_buttons"
                        android:background="@color/light_stroke_color" />

                    <LinearLayout
                        android:id="@+id/linear_buttons"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_40sdp"
                        android:layout_alignParentBottom="true"
                        android:gravity="bottom">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/read_terms_textview"
                            style="@style/Widget.CodeMakers.TextView.Button.NoBG"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:fontFamily="@font/opensans_semibold"
                            android:gravity="center"
                            android:text="@string/read_terms" />

                        <View
                            android:layout_width="1dp"
                            android:layout_height="match_parent"
                            android:background="@color/light_stroke_color" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/accept_textview"
                            style="@style/Widget.CodeMakers.TextView.Button.NoBG"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:fontFamily="@font/opensans_semibold"
                            android:gravity="center"
                            android:text="@string/accept" />

                    </LinearLayout>

                </RelativeLayout>
            </LinearLayout>

        </androidx.cardview.widget.CardView>


    </LinearLayout>
</layout>
